Fix overflow and screen size issues.

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -5,16 +5,27 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  text-align: center;
+	background: #002838;
+  margin: 0;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
 }
 
-body {
-	text-align: center;
-	background: #002838;
-  margin: 0;
+body, html {
+  width: 100vw;
+  min-width: 100vw;
+  max-width: 100vw;
+
+  height: 100vh;
+  min-height: 100vh;
+  max-height: 100vh;
+
+  overflow-x: hidden;
+  overflow-y: hidden;
 }
 
 .page-center {
